Tues July 14 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* Source/NSBrowser.m fixed bug where column matrix was getting released
        twice in method _performLoadOfColumn.  
	* NSCell.m:  isOpaque returns whether cell is bezeled per NS docs.

Fri May 29 13:30:14 1998  Adam Fedor  <fedor@ultra.doc.com>

	* Headers/gnustep/gui/AppKit.h: Include Foundation.h.

Wed May 13 15:59:32 1998  Adam Fedor  <fedor@ultra.doc.com>

	* Model/IBClasses.m: Fix header includes.
	* Translator.m: Likewise.
	* test.m: Likewise.

Mon Apr  6 16:38:40 1998  Scott Christley  <scottc@net-community.com>

	* Documentation/status.tmpl.texi: Update.

	* Add Adobe printer definition files.
	* PrinterTypes/English.lproj/*.ppd: New files.
	* PrinterTypes/French.lproj/*.ppd: New files.
	* PrinterTypes/German.lproj/*.ppd: New files.
	* PrinterTypes/Italian.lproj/*.ppd: New files.
	* PrinterTypes/Spanish.lproj/*.ppd: New files.
	* PrinterTypes/Swedish.lproj/*.ppd: New files.

Mon Apr  6 16:38:40 1998  Simon Frankau <sgf22@hermes.cam.ac.uk>

	* Headers/gnustep/gui/NSPrinter.h (+printerNames): Add method.
	* Source/NSPrinter.m: Major rewrite.

Wed Mar 11 10:47:31 1998  Scott Christley  <scottc@net-community.com>

	* Version: Version 0.5.0
	* Documentation/announce.tmpl.texi: Update.
	* Documentation/news.tmpl.texi: Update.
	* Documentation/status.tmpl.texi: Update.
	* ANNOUNCE: Regenerate.
	* FAQ: Regenerate.
	* INSTALL: Regenerate.
	* NEWS: Regenerate.
	* README: Regenerate.
	* STATUS: Regenerate.

	* Source/NSCell.m (-drawWithFrame:inView:): Mark the cell's
	frame as needing flush.
	(-highlight:withFrame:inView:): Likewise.

Sat Feb 14 16:34:22 1998  Scott Christley  <scottc@net-community.com>

	* Model/GNUmakefile (HEADER_FILES_DIR): Correct definition.

Thu Feb  5 09:44:38 1998  Adam Fedor  <fedor@ultra.doc.com>

	* GNUmakefile.postamble (header-links): Remove non-package
	links. Link DPSClient to gnustep/gui.
	* Souce/GNUmakefile: Include GNUmakefile.local.
	* Tools/GNUmakefile: Likewise.